Fixed spacing and moved master clients list

--- a/app/assets/stylesheets/controller/reports.css.scss
+++ b/app/assets/stylesheets/controller/reports.css.scss
@@ -5,3 +5,8 @@
 	margin-top: 2em;
 	width: 45em;
 }
+
+table.display td {
+  height: 3em;
+}
+
